create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1091,7 +1091,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rExsQkiqM5 {
-  background-image: url("../../../assets/images/background121.jpg");
+  background-image: url("../../../assets/images/background132.jpg");
 }
 .cid-rExsQkiqM5 .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -1626,7 +1626,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background312.jpg");
+  background-image: url("../../../assets/images/background323.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -2453,10 +2453,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background413.jpg");
+  background-image: url("../../../assets/images/background424.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background116.jpg");
+  background-image: url("../../../assets/images/background127.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -5709,7 +5709,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background413.jpg");
+  background-image: url("../../../assets/images/background424.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -6537,7 +6537,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background413.jpg");
+  background-image: url("../../../assets/images/background424.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -7521,7 +7521,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background116.jpg");
+  background-image: url("../../../assets/images/background127.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -8736,7 +8736,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background413.jpg");
+  background-image: url("../../../assets/images/background424.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
@@ -15157,10 +15157,10 @@ section.lazy-placeholder:after {
 }
 .cid-rFLnXyKK2j .card-title {
   color: #073b4c;
-  text-align: right;
+  text-align: left;
 }
 .cid-rFLnXyKK2j .mbr-text {
-  text-align: right;
+  text-align: left;
 }
 .cid-rFLnXAUhHL {
   padding-top: 90px;
