--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -730,8 +730,8 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .nav-item a {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: Left;
+  justify-content: Left;
   padding: 0.7rem 0 !important;
   margin: 0rem .65rem !important;
 }
@@ -742,7 +742,7 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .btn {
   padding: 0.4rem 1.5rem;
   display: inline-flex;
-  align-items: center;
+  align-items: Left;
 }
 .cid-qTkzRZLJNu .btn .mbr-iconfont {
   font-size: 1.6rem;
@@ -756,12 +756,12 @@ section.lazy-placeholder:after {
   padding: 0;
   transition: padding .2s;
   min-height: 3.8rem;
-  align-items: center;
+  align-items: Left;
 }
 .cid-qTkzRZLJNu .menu-logo .navbar-brand .navbar-caption-wrap {
   display: -webkit-flex;
-  -webkit-align-items: center;
-  align-items: center;
+  -webkit-align-items: Left;
+  align-items: Left;
   word-break: break-word;
   min-width: 7rem;
   margin: .3rem 0;
@@ -792,8 +792,8 @@ section.lazy-placeholder:after {
   padding-left: 0;
 }
 .cid-qTkzRZLJNu .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
+  -webkit-align-self: Left;
+  align-self: Left;
 }
 .cid-qTkzRZLJNu .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
   padding-left: 0;
@@ -930,7 +930,7 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav {
   display: block;
-  text-align: center;
+  text-align: Left;
 }
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
@@ -938,7 +938,7 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
+  text-align: Left;
 }
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons:last-child {
@@ -956,7 +956,7 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .collapsed .dropdown .dropdown-menu {
   width: 100%;
-  text-align: center;
+  text-align: Left;
   position: relative;
   opacity: 0;
   display: block;
@@ -975,7 +975,7 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .collapsed .dropdown .dropdown-submenu {
   left: 0;
-  text-align: center;
+  text-align: Left;
   width: 100%;
 }
 .cid-qTkzRZLJNu .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
@@ -1024,7 +1024,7 @@ section.lazy-placeholder:after {
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav {
     display: block;
-    text-align: center;
+    text-align: Left;
   }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
@@ -1032,7 +1032,7 @@ section.lazy-placeholder:after {
   }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
-    text-align: center;
+    text-align: Left;
   }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons:last-child,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons:last-child {
@@ -1040,7 +1040,7 @@ section.lazy-placeholder:after {
   }
   .cid-qTkzRZLJNu .dropdown .dropdown-menu {
     width: 100%;
-    text-align: center;
+    text-align: Left;
     position: relative;
     opacity: 0;
     display: block;
@@ -1059,7 +1059,7 @@ section.lazy-placeholder:after {
   }
   .cid-qTkzRZLJNu .dropdown .dropdown-submenu {
     left: 0;
-    text-align: center;
+    text-align: Left;
     width: 100%;
   }
   .cid-qTkzRZLJNu .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
@@ -1626,7 +1626,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background321.jpg");
+  background-image: url("../../../assets/images/background311.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -2453,10 +2453,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background125.jpg");
+  background-image: url("../../../assets/images/background115.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -5709,7 +5709,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -6537,7 +6537,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -7521,7 +7521,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background125.jpg");
+  background-image: url("../../../assets/images/background115.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -8736,7 +8736,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
@@ -15223,7 +15223,7 @@ section.lazy-placeholder:after {
 }
 .cid-rFLnXC6VKP .mbr-text {
   color: #767676;
-  text-align: right;
+  text-align: left;
 }
 .cid-rFLnXC6VKP .card-wrapper {
   height: 100%;
@@ -15237,7 +15237,7 @@ section.lazy-placeholder:after {
   transition: box-shadow 0.3s;
 }
 .cid-rFLnXC6VKP .card-title {
-  text-align: center;
+  text-align: left;
 }
 .cid-rFLnXE9hMM {
   padding-top: 90px;
