--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1626,7 +1626,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background311.jpg");
+  background-image: url("../../../assets/images/background321.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -2453,10 +2453,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background412.jpg");
+  background-image: url("../../../assets/images/background422.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background115.jpg");
+  background-image: url("../../../assets/images/background125.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -5711,7 +5711,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background412.jpg");
+  background-image: url("../../../assets/images/background422.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -6539,7 +6539,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background412.jpg");
+  background-image: url("../../../assets/images/background422.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -7523,7 +7523,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background115.jpg");
+  background-image: url("../../../assets/images/background125.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -8738,7 +8738,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background412.jpg");
+  background-image: url("../../../assets/images/background422.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
@@ -10831,7 +10831,8 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rDq1AGyPFR .head-item {
-  text-align: center;
+  text-align: left;
+  color: #149dcc;
 }
 .cid-rDq1AGyPFR .body-item {
   text-align: left;
@@ -13081,6 +13082,18 @@ section.lazy-placeholder:after {
 .cid-rDpKsFJobg H4 {
   text-align: center;
   color: #ffffff;
+}
+#custom-html-9n {
+  /* Type valid CSS here */
+}
+#custom-html-9n div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-9n p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-rEYfoq0Mti {
   padding-top: 90px;
