create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1626,7 +1626,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background331.jpg");
+  background-image: url("../../../assets/images/background31.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -2453,10 +2453,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background432.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background135.jpg");
+  background-image: url("../../../assets/images/background15.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -3205,7 +3205,7 @@ section.lazy-placeholder:after {
   text-align: right;
 }
 .cid-rCyrJK9Jh4 .mbr-text {
-  text-align: right;
+  text-align: left;
 }
 .cid-rCyrNfLyYv {
   padding-top: 90px;
@@ -3268,7 +3268,7 @@ section.lazy-placeholder:after {
 }
 .cid-rD8lxYNsaz .mbr-text {
   color: #767676;
-  text-align: right;
+  text-align: left;
 }
 .cid-rD8lxYNsaz .card-wrapper {
   height: 100%;
@@ -3346,7 +3346,7 @@ section.lazy-placeholder:after {
 }
 .cid-rCyr6UZZ7S .mbr-text {
   color: #767676;
-  text-align: center;
+  text-align: left;
 }
 .cid-rCyr6UZZ7S .card-wrapper {
   height: 100%;
@@ -4537,7 +4537,7 @@ section.lazy-placeholder:after {
 }
 .cid-rCsOHUJwyM .mbr-text {
   color: #767676;
-  text-align: right;
+  text-align: left;
 }
 .cid-rCsOHUJwyM .card-wrapper {
   height: 100%;
@@ -5711,7 +5711,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background432.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -6539,7 +6539,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background432.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -7523,7 +7523,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background135.jpg");
+  background-image: url("../../../assets/images/background15.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -7574,6 +7574,7 @@ section.lazy-placeholder:after {
 }
 .cid-rCybs3vGiB .mbr-text {
   color: #767676;
+  text-align: center;
 }
 .cid-rCybs3vGiB .card-wrapper {
   height: 100%;
@@ -7649,6 +7650,7 @@ section.lazy-placeholder:after {
 }
 .cid-rCybmer64N H2 {
   text-align: center;
+  color: #0f7699;
 }
 .cid-rCybmer64N .card-title {
   text-align: left;
@@ -8738,7 +8740,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background432.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
@@ -8747,7 +8749,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-rCQgI1AEja H3 {
-  color: #149dcc;
+  color: #c4bc3b;
 }
 .cid-rCQhqRegdo {
   padding-top: 90px;
