--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1626,7 +1626,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background343.jpg");
+  background-image: url("../../../assets/images/background31.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -1953,6 +1953,18 @@ section.lazy-placeholder:after {
   .cid-rExtjDMLzA .container > .row > .col-md-6:last-child {
     padding-left: 30px;
   }
+}
+#custom-html-9s {
+  /* Type valid CSS here */
+}
+#custom-html-9s div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-9s p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-rCktZQti8U {
   padding-top: 15px;
@@ -2453,10 +2465,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background444.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background147.jpg");
+  background-image: url("../../../assets/images/background15.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -5711,7 +5723,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background444.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -6515,7 +6527,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background444.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -7499,7 +7511,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background147.jpg");
+  background-image: url("../../../assets/images/background15.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -8716,7 +8728,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background444.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
